--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
   "homepage": "https://github.com/Nidya-Mayil/Nidya-Mayil.github.io#readme",
   "dependencies": {
     "body-parser": "^1.20.1",
-    "express": "^4.18.2",
-    "fs": "^0.0.1-security",
-    "readline": "^1.3.0"
+    "express": "^4.18.2"
   }
 }
